--- a/server/package.json
+++ b/server/package.json
@@ -23,14 +23,18 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3",
+    "nodemailer": "^6.9.14",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
-    "@types/node": "^20.14.6"
+    "@types/ejs": "^3.1.5",
+    "@types/node": "^20.14.6",
+    "@types/nodemailer": "^6.4.15"
   }
 }
