--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsnd --respawn server.ts"
+    "dev": "ts-node-dev --respawn --transpile-only server.ts"
   },
   "keywords": [
     "LMS",
