--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/node-cron": "^3.0.11",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.2.0",
     "cookie-parser": "^1.4.6",
@@ -29,6 +30,7 @@
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
