--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.7.2",
     "formik": "^2.4.6",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
@@ -22,6 +23,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-pro-sidebar": "^0.7.1",
     "react-redux": "^9.1.2",
     "yup": "^1.4.0"
   },
