--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
+    "@mui/x-data-grid": "^7.8.0",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
@@ -25,6 +26,7 @@
     "react-icons": "^5.2.1",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^9.1.2",
+    "timeago.js": "^4.0.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
