--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^5.15.20",
     "@mui/x-data-grid": "^7.8.0",
     "@reduxjs/toolkit": "^2.2.5",
+    "@stripe/react-stripe-js": "^2.7.3",
+    "@stripe/stripe-js": "^4.1.0",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
     "next": "14.2.4",
