--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node-cron": "^3.0.11",
+    "@types/socket.io": "^3.0.2",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.2.0",
@@ -33,6 +34,7 @@
     "mongoose": "^8.4.3",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
+    "socket.io": "^4.7.5",
     "stripe": "^16.2.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
