--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^9.1.2",
     "recharts": "^2.12.7",
+    "socket.io-client": "^4.7.5",
     "timeago.js": "^4.0.2",
     "yup": "^1.4.0"
   },
